--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,10 @@ h1 {
     text-align: center;
 }
 
-img {
 
-    border-radius: 5px;
-    padding: 0 auto;
-    border: 1px solid #999999;
-    margin-bottom: 10px;
-    margin: 0 auto;
-}
 canvas{
 
-  float: right;
+
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -48,6 +41,10 @@ canvas{
 #wrapper {
     width: 100%;
     margin: 0 auto;
+}
+
+#drawing1 {
+display: none;
 }
 
 .outer-input-div {
