--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@ html, body {
 }
 
 h1 {
-    font-family: 'Oswald', sans-serif;
-    color: #E98977;
+    color: green;
     font-weight: bold;
-    background-color: #F4DEC2;
+    background-color: white;
     text-align: center;
+    border-radius: 5px;
 }
 
 
