starting php communication

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -503,7 +503,7 @@ nav {
   @media (max-width: 1024px) {
     #menu {
       display: block;
-      color: #000; } }
+      color: #9E9E9E; } }
 
 .sidenav {
   height: 100%;
