--- a/css/style.scss
+++ b/css/style.scss
@@ -14,9 +14,9 @@ $font-roboto:'Roboto Slab', serif;
 //created by Brittney Murphy
 //commerical license: http://brittneymurphydesign.com/downloads/orange-juice/
 @font-face {
-    font-family: 'Orange_Juice';
-    src: url('../fonts/orangejuice2.ttf') format('truetype');
-  }
+  font-family: 'Orange_Juice';
+  src: url('../fonts/orangejuice2.ttf') format('truetype');
+}
 $font-orange:'Orange_Juice';
 
 //box sizing mixin
@@ -51,7 +51,7 @@ $amber: #FFC107;
 $orange: #FF9800;
 $deep-orange: #FF5722;
 $brown: #795548;
-$grey: #9E9E9E;
+$grey: #F0EFEF;
 $blue-grey: #607D8B;
 
 
@@ -94,20 +94,20 @@ h2{
   line-height: 3px;
   color:$grey;
   @media #{$mq-1024} {
-  font-size:3em;
+    font-size:3em;
 
- }
+  }
 }
 h3{ 
   font-size:3em;
   font-family: $font-orange; 
   text-align:center;
   padding-bottom:1em;
-   line-height: 2px;
-   color:$grey;
-   @media #{$mq-1024} {
-  font-size:2em;
- }
+  line-height: 2px;
+  color:$grey;
+  @media #{$mq-1024} {
+    font-size:2em;
+  }
 }
 
 a{text-decoration:none; }
@@ -117,6 +117,7 @@ a{text-decoration:none; }
   background-size: cover;
   background-repeat:no-repeat;
   background-position:center;
+  border:5px solid #fff;
 }
 
 #page-two {
@@ -124,25 +125,36 @@ a{text-decoration:none; }
   background-size: cover;
   background-repeat:no-repeat;
   background-position:center;
+  border:5px solid #fff;
 }
 #page-three {
   background-image: url("../images/section3.jpg");
- background-size: cover;
-  background-repeat:no-repeat;
-  background-position:center;
-}
-#page-four{
-  background-image: url("../images/section4.png");
-  background-size:20%;
-  background-position:center;
-}
-#page-five {
-  background-image: url("../images/section1.jpg");
   background-size: cover;
   background-repeat:no-repeat;
   background-position:center;
+  border:5px solid #fff;
 }
-
+#page-four{
+  background-image: url("../images/section4.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  border:5px solid #fff;
+}
+#page-five {
+  background-image: url("../images/section5.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  border:5px solid #fff;
+}
+#page-six {
+  background-image: url("../images/section6.jpg");
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  border:5px solid #fff;
+}
 
 #page-one, #page-two, #page-three, #page-four , #page-five{
   padding-top:2em;
@@ -268,9 +280,7 @@ nav {
   }
 }
 
-//textarea  should not be displayed
-//#textarea{display:none;}
-
+//contact form
 textarea {
   width: 200px;
   min-height: 70px;
@@ -280,10 +290,11 @@ textarea {
   padding: 5px;
 }
 
-
-
-
-//index page styling
+//drawing page styling
+// home icon
+#home-top{
+  position:absolute;
+}
 canvas {
   position: relative;
   padding: 0;
@@ -333,7 +344,6 @@ canvas {
 
 
 //popup on main page
-
 /*OVERLAY*/
 .overlay{
   position:fixed;
@@ -362,63 +372,63 @@ canvas {
   text-shadow:none; 
   color:#066;   
   padding:0;}
-.pop h2{
-  text-shadow:none; 
-  font-size:16px; 
-  color:#666; 
-  text-align:center;}
-.pop h1{
-  font-size:40px;  
-  font-family: $font-orange; 
-  margin-bottom:4px; 
-  color:#666; 
-  margin-bottom:14px; 
-  text-align:center;}
-.pop div{ margin-top:30px;}
-.pop p{line-height:100%;}
+  .pop h2{
+    text-shadow:none; 
+    font-size:16px; 
+    color:#666; 
+    text-align:center;}
+    .pop h1{
+      font-size:40px;  
+      font-family: $font-orange; 
+      margin-bottom:4px; 
+      color:#666; 
+      margin-bottom:14px; 
+      text-align:center;}
+      .pop div{ margin-top:30px;}
+      .pop p{line-height:100%;}
 
-#close{
-  position:absolute;
-  top: -17px;
-  right: 15px;
-  cursor:pointer; 
-}
+      #close{
+        position:absolute;
+        top: -17px;
+        right: 15px;
+        cursor:pointer; 
+      }
 
-.pop h1, .pop h2{
-  -webkit-transition: all 0.5s ease;
-  -moz-transition:    all 0.5s ease;
-  -o-transition:      all 0.5s ease;
-  -ms-transition:     all 0.5s ease;
-  transition:         all 0.5s ease;  
-}
+      .pop h1, .pop h2{
+        -webkit-transition: all 0.5s ease;
+        -moz-transition:    all 0.5s ease;
+        -o-transition:      all 0.5s ease;
+        -ms-transition:     all 0.5s ease;
+        transition:         all 0.5s ease;  
+      }
 
 
-/*hide left*/
-.pop h1{
-  -moz-transform: translateX(-200px);
-  -webkit-transform: translateX(-200px);
-  -o-transform: translateX(-200px);
-  -ms-transform: translateX(-200px);
-  transform: translateX(-200px);
-  opacity:0;
-}
+      /*hide left*/
+      .pop h1{
+        -moz-transform: translateX(-200px);
+        -webkit-transform: translateX(-200px);
+        -o-transform: translateX(-200px);
+        -ms-transform: translateX(-200px);
+        transform: translateX(-200px);
+        opacity:0;
+      }
 
-/*hide right*/
-.pop h2{
-  -moz-transform: translateX(200px);
-  -webkit-transform: translateX(200px);
-  -o-transform: translateX(200px);
-  -ms-transform: translateX(200px);
-  transform: translateX(200px); 
-  opacity:0;
-}
+      /*hide right*/
+      .pop h2{
+        -moz-transform: translateX(200px);
+        -webkit-transform: translateX(200px);
+        -o-transform: translateX(200px);
+        -ms-transform: translateX(200px);
+        transform: translateX(200px); 
+        opacity:0;
+      }
 
-/*Slide left > right || right > left*/
-.pop h1.animationActive, .pop h2.animationActive {
-  -moz-transform: translateX(0px);
-  -webkit-transform: translateX(0px);
-  -o-transform: translateX(0px);
-  -ms-transform: translateX(0px);
-  transform: translateX(0px); 
-  opacity:1;
-}
+      /*Slide left > right || right > left*/
+      .pop h1.animationActive, .pop h2.animationActive {
+        -moz-transform: translateX(0px);
+        -webkit-transform: translateX(0px);
+        -o-transform: translateX(0px);
+        -ms-transform: translateX(0px);
+        transform: translateX(0px); 
+        opacity:1;
+      }
