--- a/css/_style-grid.scss
+++ b/css/_style-grid.scss
@@ -71,7 +71,7 @@ table{border-collapse:collapse;border-spacing:0;}
 	width:100%; 
 	margin-bottom:12px; 
 	clear:both;
-	background-color: #eaeaea;
+	background-color: #F0EFEF;
 	box-shadow:rgba(0,0,0,0.3) 0px 0px 5px;
 	border:5px solid #fff;
 	
