--- a/css/main_style.css
+++ b/css/main_style.css
@@ -278,7 +278,7 @@ table {
   width: 100%;
   margin-bottom: 12px;
   clear: both;
-  background-color: #eaeaea;
+  background-color: #F0EFEF;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
   border: 5px solid #fff;
   background-position: center;
@@ -448,6 +448,13 @@ a {
   background-repeat: no-repeat;
   background-position: center;
   border: 5px solid #fff; }
+  #page-five textarea {
+    width: 200px;
+    min-height: 70px;
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    color: #444;
+    padding: 5px; }
 
 #page-six {
   background-image: url("../images/section6.jpg");
@@ -458,21 +465,6 @@ a {
 
 #page-one, #page-two, #page-three, #page-four, #page-five {
   padding-top: 2em; }
-
-#page-one {
-  background-color: #fff; }
-
-#page-two {
-  background-color: #F0EFEF; }
-
-#page-three {
-  background-color: #4CAF50; }
-
-#page-four {
-  background-color: #009688; }
-
-#page-five {
-  background-color: #F44336; }
 
 nav {
   background-color: #3F51B5;
@@ -563,22 +555,39 @@ nav {
     .row [class^="col"] p:first-line {
       font-weight: 800; }
 
-textarea {
-  width: 200px;
-  min-height: 70px;
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-  color: #444;
-  padding: 5px; }
-
 #home-top {
   position: absolute; }
+  #home-top ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+  #home-top li {
+    float: left; }
+  #home-top li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none; }
+  #home-top li a:hover {
+    background-color: #111111; }
+
+.division {
+  width: 100%;
+  height: 50%;
+  float: left;
+  clear: both; }
 
 canvas {
   position: relative;
   padding: 0;
   margin: 0 auto;
-  cursor: crosshair; }
+  cursor: crosshair;
+  max-width: 100%;
+  height: auto;
+  background-image: url("../images/canvas-img-1.png");
+  background-size: contain;
+  background-repeat: no-repeat; }
 
 #result {
   position: relative;
@@ -586,32 +595,37 @@ canvas {
   font-weight: bold; }
 
 #drawing1 {
-  display: none; }
-
-.outer-input-div {
-  margin: 0 auto; }
-
-.inner-input-div {
-  margin: 0 auto;
-  width: 60%; }
+  display: none;
+  width: 100%;
+  height: 100%; }
 
 #query,
 #search {
-  width: 80%;
-  outline: none;
+  width: 100%;
+  height: 100%;
   border-radius: 5px; }
 
+input[type="search"] {
+  -webkit-appearance: textfield; }
+
 #search {
-  border: none;
   cursor: pointer;
-  background-color: #F2B4A8;
-  color: white; }
+  background-color: #FF9800;
+  color: white;
+  font-size: 40px; }
 
 #query {
-  display: inline-block;
-  border: 1px solid #cccccc;
+  border: 1px solid;
   font-weight: bold;
-  min-width: 180px; }
+  font-size: 15px; }
+
+@media (max-width: 700px) {
+  #controls {
+    display: none; } }
+
+#rules {
+  text-align: left;
+  list-style: circle; }
 
 #rijks-logo {
   width: 30%;
