--- a/css/style.scss
+++ b/css/style.scss
@@ -147,6 +147,15 @@ a{text-decoration:none; }
   background-repeat:no-repeat;
   background-position:center;
   border:5px solid #fff;
+  //contact form
+  textarea {
+    width: 200px;
+    min-height: 70px;
+    font-family: Arial, sans-serif;
+    font-size: 13px;
+    color: #444;
+    padding: 5px;
+  }
 }
 #page-six {
   background-image: url("../images/section6.jpg");
@@ -160,16 +169,6 @@ a{text-decoration:none; }
   padding-top:2em;
 
 }
-
-
-#page-one {background-color:$white;}
-#page-two {background-color:$grey;}
-#page-three {background-color:$green;}
-#page-four {background-color:$teal;}
-#page-five {background-color:$red;}
-
-
-
 //menu
 nav {
   background-color: $indigo;
@@ -211,7 +210,7 @@ nav {
  }
 }
 
-//menu on small screen - icon
+//hamburger menu on small screen - icon
 #menu{
   font-size:30px;
   cursor:pointer;
@@ -280,26 +279,50 @@ nav {
   }
 }
 
-//contact form
-textarea {
-  width: 200px;
-  min-height: 70px;
-  font-family: Arial, sans-serif;
-  font-size: 13px;
-  color: #444;
-  padding: 5px;
-}
-
 //drawing page styling
 // home icon
 #home-top{
   position:absolute;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    float: left;
+  }
+
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
+
+  li a:hover {
+    background-color: #111111;
+  }
 }
+
+.division{
+  width:100%;
+  height:50%;
+  float:left;
+  clear: both;
+}
+
 canvas {
   position: relative;
   padding: 0;
   margin: 0 auto;
   cursor: crosshair;
+  max-width: 100%;  
+  height: auto; 
+  background-image: url('../images/canvas-img-1.png');
+   background-size: contain;
+  background-repeat:no-repeat;
 }
 #result {
   position: relative;
@@ -308,33 +331,44 @@ canvas {
 }
 #drawing1 {
   display: none;
-}
-.outer-input-div {
-  margin: 0 auto;
-}
-.inner-input-div {
-  margin: 0 auto;
-  width: 60%;
+  width: 100%;
+  height: 100%;
 }
 #query,
 #search {
-  width: 80%;
-  outline: none;
+  width: 100%;
+  height: 100%;
   border-radius: 5px;
 }
-#search {
-  border: none;
-  cursor: pointer;
-  background-color: #F2B4A8;
-  color: white;
-}
-#query {
-  display: inline-block;
-  border: 1px solid #cccccc;
-  font-weight: bold;
-  min-width: 180px;
+//this sets the appearance to be the same in all browsers
+input[type="search"] {
+  -webkit-appearance: textfield;
 }
 
+#search {
+  cursor: pointer;
+  background-color: $orange;
+  color: white;
+  font-size: 40px;
+}
+#query {
+  border: 1px solid;
+  font-weight: bold;
+  font-size: 15px;
+
+}
+
+//controls to go away on small screens
+#controls{
+@media #{$mq-700} {
+ display:none;
+ }
+}
+
+#rules{
+  text-align: left;
+  list-style: circle;
+}
 #rijks-logo {
   width: 30%;
   vertical-align: middle;
