--- a/css/_style-grid.scss
+++ b/css/_style-grid.scss
@@ -73,7 +73,7 @@ table{border-collapse:collapse;border-spacing:0;}
 	clear:both;
 	background-color: #F0EFEF;
 	box-shadow:rgba(0,0,0,0.3) 0px 0px 5px;
-	border:5px solid #fff;
+	border:3px solid #fff;
 	
 	background-position:center; 
 	
@@ -92,13 +92,13 @@ table{border-collapse:collapse;border-spacing:0;}
 	transition:         all 0.2s ease;	
 }
 
-.box:hover{
-	-moz-transform: scale(0.98);
-	-webkit-transform: scale(0.98);
-	-o-transform: scale(0.98);
-	-ms-transform: scale(0.98);
-	transform: scale(0.98);	
-}
+// .box:hover{
+// 	-moz-transform: scale(0.98);
+// 	-webkit-transform: scale(0.98);
+// 	-o-transform: scale(0.98);
+// 	-ms-transform: scale(0.98);
+// 	transform: scale(0.98);	
+// }
 
 
 .box1{height:50px;}
