--- a/css/main_style.css
+++ b/css/main_style.css
@@ -280,7 +280,7 @@ table {
   clear: both;
   background-color: #F0EFEF;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
-  border: 5px solid #fff;
+  border: 3px solid #fff;
   background-position: center;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -292,13 +292,6 @@ table {
   -o-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
   transition: all 0.2s ease; }
-
-.box:hover {
-  -moz-transform: scale(0.98);
-  -webkit-transform: scale(0.98);
-  -o-transform: scale(0.98);
-  -ms-transform: scale(0.98);
-  transform: scale(0.98); }
 
 .box1 {
   height: 50px; }
@@ -602,8 +595,7 @@ canvas {
 #query,
 #search {
   width: 100%;
-  height: 100%;
-  border-radius: 5px; }
+  height: 100%; }
 
 input[type="search"] {
   -webkit-appearance: textfield; }
@@ -619,8 +611,13 @@ input[type="search"] {
   font-weight: bold;
   font-size: 15px; }
 
+#canvas-image {
+  position: relative;
+  width: 100%;
+  height: 100%; }
+
 @media (max-width: 700px) {
-  #controls {
+  #save-image {
     display: none; } }
 
 #rules {
