--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,13 @@
 @import "simple-grid";
 @import "style-grid";
 @import "bourbon/bourbon";
+//Orange Juice
+//created by Brittney Murphy
+//commerical license: http://brittneymurphydesign.com/downloads/orange-juice/
+@font-face {
+  font-family: 'Orange_Juice';
+  src: url('../fonts/orangejuice2.ttf') format('truetype');
+}
 
 // font awesome
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
@@ -10,13 +17,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 $font-roboto:'Roboto Slab', serif;
 
-//Orange Juice
-//created by Brittney Murphy
-//commerical license: http://brittneymurphydesign.com/downloads/orange-juice/
-@font-face {
-  font-family: 'Orange_Juice';
-  src: url('../fonts/orangejuice2.ttf') format('truetype');
-}
+
 $font-orange:'Orange_Juice';
 
 //box sizing mixin
@@ -338,7 +339,6 @@ canvas {
 #search {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
 }
 //this sets the appearance to be the same in all browsers
 input[type="search"] {
@@ -358,8 +358,15 @@ input[type="search"] {
 
 }
 
+#canvas-image{
+  position: relative;
+    width: 100%;
+    height: 100%;
+
+}
+
 //controls to go away on small screens
-#controls{
+#save-image{
 @media #{$mq-700} {
  display:none;
  }
