--- a/css/style.scss
+++ b/css/style.scss
@@ -7,9 +7,9 @@
 //commerical license: http://brittneymurphydesign.com/downloads/orange-juice/
 @font-face {
   font-family: 'Orange_Juice';
-  src: url('../fonts/orangejuice2.ttf') format('truetype');
+  src: url('http://draw-like-masters.elwebman.nl/fonts/orangejuice2.ttf') format('truetype');
 }
-
+$font-orange:'Orange_Juice';
 // font awesome
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 
@@ -18,7 +18,7 @@
 $font-roboto:'Roboto Slab', serif;
 
 
-$font-orange:'Orange_Juice';
+
 
 //box sizing mixin
 @mixin box-sizing($box-model) {
@@ -65,6 +65,27 @@ $blue-grey: #607D8B;
   float: right !important;
 }
 
+
+// Visually hide an element
+// equivallent to display:none
+// technique for hiding elements while at the same time make them accessible.
+// this uses a placholder selector
+%hidden {
+ margin: -1px;
+ padding: 0;
+ width: 1px;
+ height: 1px;
+ overflow: hidden;
+ clip: rect(0 0 0 0);
+ clip: rect(0, 0, 0, 0);
+ position: absolute;
+}
+
+//usage: this class sets items to hidden
+.hidden {
+@extend %hidden;
+}
+
 //media queries
 $mq-1024: "(max-width: 1024px)";
 $mq-700: "(max-width: 700px)";
@@ -98,16 +119,24 @@ h2{
     font-size:3em;
 
   }
+  @media #{$mq-700} {
+    font-size:2em;
+
+  }
 }
 h3{ 
   font-size:3em;
   font-family: $font-orange; 
   text-align:center;
+  padding-top:1em;
   padding-bottom:1em;
   line-height: 2px;
   color:$grey;
   @media #{$mq-1024} {
     font-size:2em;
+  }
+   @media #{$mq-700} {
+    font-size:1em;
   }
 }
 
@@ -270,12 +299,9 @@ nav {
       font-family: $font-orange; 
       font-size: 2.5em;
       line-height: 1em;
-      font-weight: 400;
+      font-weight: 800;
       float: left;
       margin: 0 0.107em 0 0;
-    }
-    &:first-line {
-      font-weight: 800;
     }
   }
 }
@@ -301,17 +327,9 @@ nav {
     padding: 16px;
     text-decoration: none;
   }
-
   li a:hover {
     background-color: #111111;
   }
-}
-
-.division{
-  width:100%;
-  height:50%;
-  float:left;
-  clear: both;
 }
 
 canvas {
@@ -322,8 +340,11 @@ canvas {
   max-width: 100%;  
   height: auto; 
   background-image: url('../images/canvas-img-1.png');
-   background-size: contain;
+  background-size: contain;
   background-repeat:no-repeat;
+    @media #{$mq-700} {//image to change on screen size
+    background-image: url('../images/canvas-img-mobile.png');
+   }
 }
 #result {
   position: relative;
@@ -335,26 +356,28 @@ canvas {
   width: 100%;
   height: 100%;
 }
-#query,
-#search {
+
+.division{
+  width:100%;
+  height:33%;
+  float:left;
+  clear: both;
+}
+.tools {
+  font-family: $font-orange;
+  cursor: pointer;
   width: 100%;
   height: 100%;
-}
-//this sets the appearance to be the same in all browsers
-input[type="search"] {
-  -webkit-appearance: textfield;
+  font-size: 30px;
+  background-color: $red;
 }
 
-#search {
-  cursor: pointer;
-  background-color: $orange;
-  color: white;
-  font-size: 40px;
-}
+
 #query {
-  border: 1px solid;
   font-weight: bold;
   font-size: 15px;
+  width: 100%;
+  height: 100%;
 
 }
 
@@ -362,25 +385,24 @@ input[type="search"] {
   position: relative;
     width: 100%;
     height: 100%;
-
 }
 
-//controls to go away on small screens
-#save-image{
-@media #{$mq-700} {
- display:none;
- }
-}
-
-#rules{
-  text-align: left;
-  list-style: circle;
-}
 #rijks-logo {
   width: 30%;
   vertical-align: middle;
   border: 1px solid #999999;
   border-radius: 5px;
+}
+
+//entire section to be removed in small screen
+#mobile{
+  @media #{$mq-700} {
+ display:none;
+ }
+}
+//this sets the appearance to be the same in all browsers
+input[type="search"] {
+  -webkit-appearance: textfield;
 }
 
 
@@ -393,7 +415,10 @@ input[type="search"] {
   top:0;
   left:0;
   width:100%;
-  height:100%;  
+  height:100%;
+    @media #{$mq-700} {
+ display:none;
+ }  
 }
 
 .pop{
