--- a/css/main_style.css
+++ b/css/main_style.css
@@ -603,7 +603,7 @@ canvas {
 
 .division {
   width: 100%;
-  height: 33%;
+  height: 50%;
   float: left;
   clear: both; }
 
@@ -639,6 +639,22 @@ canvas {
 input[type="search"] {
   -webkit-appearance: textfield; }
 
+.loader {
+  border-top: 15px solid white;
+  border-bottom: 15px solid white;
+  border-left: 15px solid #3C8DC5;
+  border-right: 15px solid #3C8DC5;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  float: right;
+  animation: spin 2s linear infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
 /*OVERLAY*/
 .overlay {
   position: fixed;
