--- a/css/main_style.css
+++ b/css/main_style.css
@@ -449,13 +449,13 @@ a {
   background-position: center;
   border: 5px solid #fff; }
 
-#page-five {
+#page-six {
   background-image: url("../images/section5.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   border: 5px solid #fff; }
-  #page-five textarea {
+  #page-six textarea {
     width: 200px;
     min-height: 70px;
     font-family: Arial, sans-serif;
@@ -463,14 +463,14 @@ a {
     color: #444;
     padding: 5px; }
 
-#page-six {
+#page-five {
   background-image: url("../images/section6.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   border: 5px solid #fff; }
 
-#page-one, #page-two, #page-three, #page-four, #page-five {
+#page-one, #page-two, #page-three, #page-four, #page-five, #page-six {
   padding-top: 2em; }
 
 nav {
@@ -532,7 +532,7 @@ nav {
     padding-bottom: 8px;
     padding-left: 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: #F0EFEF;
     display: block;
     transition: 0.3s; }
@@ -633,7 +633,7 @@ canvas {
   border-radius: 5px; }
 
 @media (max-width: 700px) {
-  #mobile {
+  .mobile {
     display: none; } }
 
 input[type="search"] {
