--- a/css/style.scss
+++ b/css/style.scss
@@ -171,7 +171,7 @@ a{text-decoration:none; }
   background-position:center;
   border:5px solid #fff;
 }
-#page-five {
+#page-six {
   background-image: url("../images/section5.jpg");
   background-size: cover;
   background-repeat:no-repeat;
@@ -187,7 +187,7 @@ a{text-decoration:none; }
     padding: 5px;
   }
 }
-#page-six {
+#page-five {
   background-image: url("../images/section6.jpg");
   background-size: cover;
   background-repeat:no-repeat;
@@ -195,10 +195,11 @@ a{text-decoration:none; }
   border:5px solid #fff;
 }
 
-#page-one, #page-two, #page-three, #page-four , #page-five{
+#page-one, #page-two, #page-three, #page-four , #page-five,#page-six{
   padding-top:2em;
 
 }
+
 //menu
 nav {
   background-color: $indigo;
@@ -270,7 +271,7 @@ nav {
     padding-bottom:8px;
     padding-left:32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
     color: $grey;
     display: block;
     transition: 0.3s;
@@ -395,7 +396,7 @@ canvas {
 }
 
 //entire section to be removed in small screen
-#mobile{
+.mobile{
   @media #{$mq-700} {
  display:none;
  }
