fixing error page and communication php page

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -422,14 +422,14 @@ a {
   text-decoration: none; }
 
 #page-one {
-  background-image: url("../images/section1.jpg");
+  background-image: url("../images/section2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   border: 5px solid #fff; }
 
 #page-two {
-  background-image: url("../images/section2.jpg");
+  background-image: url("../images/section1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -674,7 +674,7 @@ input[type="search"] {
   left: 50%;
   width: 400px;
   padding: 20px;
-  height: 240px;
+  height: 300px;
   margin: -110px 0px 0px -220px;
   background: #fff;
   color: #666;
@@ -744,5 +744,22 @@ input[type="search"] {
   -ms-transform: translateX(0px);
   transform: translateX(0px);
   opacity: 1; }
+
+.social {
+  font-size: 30px; }
+  .social ul {
+    list-style: outside none none;
+    margin: 0 auto;
+    padding: 0; }
+  .social li {
+    float: left; }
+  .social li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none; }
+  .social li a:hover {
+    background-color: #111111; }
 
 /*# sourceMappingURL=main_style.css.map */
