--- a/css/style.scss
+++ b/css/style.scss
@@ -324,7 +324,7 @@ nav {
     display: inline-block;
     color: white;
     text-align: center;
-    padding: 16px;
+    padding: 5px;
     text-decoration: none;
   }
   li a:hover {
@@ -517,27 +517,28 @@ input[type="search"] {
 
 //social icons
 .social{
-  font-size: 30px;
+  font-size: 50px;
 
   ul {
     list-style: outside none none;
     margin: 0 auto;
-    padding: 0;
+    
   }
 
   li {
     float: left;
+    padding: 10px;
   }
 
   li a {
     display: inline-block;
-    color: white;
-    text-align: center;
+     text-align: center;
     padding: 16px;
     text-decoration: none;
   }
   li a:hover {
-    background-color: #111111;
+    background-color: $white;
+    border-radius:5px;
   }
 }
 
